# sistema-monitorador-enchentes-raspberry

./: CMakeLists.txt  README.md  sistema-monitorador-enchentes-raspberry.c
lib/: font.h  leds.c  leds.h  ssd1306.c  ssd1306.h
